--- a/Acucafe.Tests/Acucafe.Tests.csproj
+++ b/Acucafe.Tests/Acucafe.Tests.csproj
@@ -86,6 +86,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScenarioFor.cs" />
+    <Compile Include="Scenarios\ChocolateToppingExpressoOrder.cs" />
     <Compile Include="Scenarios\MilkNoSugarIceTeaOrder.cs" />
     <Compile Include="Scenarios\MilkSugarIceTeaOrder.cs" />
     <Compile Include="Scenarios\NoMilkSugarTeaOrder.cs" />
